--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/ContractTollOperator.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/ContractTollOperator.cshtml
@@ -34,7 +34,7 @@
                         <td>@cont.Type</td>
                         <td>@cont.ExpiryDate</td>
                         <td>@cont.UserId</td>
-                        <td><a href="/Toll/Contract?contractId=@cont.Id" class="btn btn-sm btn-primary ml-5">View Details</a></td>
+                        <td><a href="/Toll/ContractDetails?contractId=@cont.Id" class="btn btn-sm btn-primary ml-5">View Details</a></td>
                     </tr>
                 }
             }
