--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/Payment.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/Payment.cshtml
@@ -20,7 +20,7 @@
         <div class="col-sm-6">
             <form asp-controller="Toll" asp-action="Payment" method="post">
                 <div class="form-group">
-                    <h5>Invoice ID: <span class="badge badge-primary">@Model.invoice.Id</span></h5>
+                    <h5>Invoice ID: <input type="text" class="inputBadge badge-primary" name="id" value="@Model.invoice.Id" /></h5>
                 </div>
                 <div class="form-group">
                     <label for="cards">Select card</label>
