--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/wwwroot/css/site.css
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/wwwroot/css/site.css
@@ -152,3 +152,28 @@ app {
 #invoiceDetails {
     padding: 0px;
 }
+
+.hidden {
+    padding: 0px;
+    margin: 0px;
+    display: none;
+    width: 0px;
+    height: 0px;
+}
+
+.inputBadge {
+    margin: 0px;
+    width: 20px;
+    border-color: #007bff;
+    font-size: 15px;
+    border-style: none;
+    display: inline-block;
+    padding: 0.25em 0.4em;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
