--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Shared/_Layout.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Shared/_Layout.cshtml
@@ -83,10 +83,16 @@
                                     <a class="nav-link" asp-area="" asp-controller="Toll" asp-action="Contracts">@Localizer["Contracts"]</a>
                                 </li>
                             }
+                            <partial name="_LoginPartial" />
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">@Localizer["About Us"]</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">@Localizer["Privacy"]</a>
                             </li>
-                            <partial name="_LoginPartial" />
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="ContactUs">@Localizer["Contact Us"]</a>
+                            </li>
                         </ul>
                     </div>
                 </nav>
