--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/ContractRoadUser.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/ContractRoadUser.cshtml
@@ -10,7 +10,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>ContractRoadUser</h1>
+<h1>@Localizer["Contract Road User"]</h1>
 
 <div class="container">
     <table class="table table-hover table-bordered mt-5 table-sm">
