Fix not being able to set Norwegian language

--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Shared/_Layout.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                                     <option value="en" selected="@(preferenceService.GetLanguage() == "en")">@Localizer["English"]</option>
                                     <option value="fr" selected="@(preferenceService.GetLanguage() == "fr")">@Localizer["French"]</option>
                                     <option value="ar" selected="@(preferenceService.GetLanguage() == "ar")">@Localizer["Arabic"]</option>
-                                    <option value="no" selected="@(preferenceService.GetLanguage() == "no")">@Localizer["Norwegian"]</option>
+                                    <option value="nb" selected="@(preferenceService.GetLanguage() == "nb")">@Localizer["Norwegian"]</option>
                                     <option value="sv" selected="@(preferenceService.GetLanguage() == "sv")">@Localizer["Swedish"]</option>
                                     <option value="da" selected="@(preferenceService.GetLanguage() == "da")">@Localizer["Danish"]</option>
                                     <option value="fi" selected="@(preferenceService.GetLanguage() == "fi")">@Localizer["Finnish"]</option>
