--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/ContractRoadUser.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/ContractRoadUser.cshtml
@@ -8,11 +8,11 @@
 
 <h1>@ViewData["Title"]</h1>
 @{
-    ViewData["Title"] = "ContractRoadUser";
+    ViewData["Title"] = Localizer["ContractRoadUser"];
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>ContractRoadUser</h1>
+<h1>@Localizer["Contract Road User"]</h1>
 
 <div class="container">
     <table class="table table-hover table-bordered mt-5 table-sm">
@@ -32,17 +32,21 @@
                 foreach (var cont in Model.contracts)
                 {
                     <tr>
-                        <td>@Localizer[cont.Id.ToString()]</td>
+                        <td>@cont.Id</td>
                         <td>@Localizer[cont.Company]</td>
-                        <td>@Localizer[cont.Fee.ToString()]</td>
+                        <td>@cont.Fee</td>
                         <td>@Localizer[cont.Type]</td>
-                        <td>@Localizer[cont.ExpiryDate.ToString()]</td>
-                        <td>@Localizer[cont.UserId]</td>
+                        <td>@cont.ExpiryDate</td>
+                        <td>@cont.UserId</td>
                         <td><a href="/Toll/ContractDetails?contractId=@cont.Id" class="btn btn-sm btn-primary ml-5">@Localizer["View Details"]</a></td>
                     </tr>
                 }
             }
         </tbody>
     </table>
-    <button id="newContract" class="btn btn-success">Request New Contract</button>
+    @if (User.IsInRole("road-user"))
+    {
+        <button id="newContract" class="btn btn-success">@Localizer["Request New Contract"]</button>
+        <p id="newTxt" class="hidden">@Localizer["Your request has been sent. One of our team will get back to you shortly."]</p>
+    }
 </div>
