--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexAdmin.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexAdmin.cshtml
@@ -25,7 +25,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var user in Model.users)
+                @foreach (var user in Model.Users)
                 {
                     <tr>
                         <td>@user.Id</td>
