--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/ContractTollOperator.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/ContractTollOperator.cshtml
@@ -1,7 +1,7 @@
 ﻿@using CSISD_Toll_Operator_Assignment.Models.View
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
-@model ContractView
+@model ContractViewModel
 
 <h1>@ViewData["Title"]</h1>
 @{
@@ -26,7 +26,7 @@
         </thead>
         <tbody>
             @{
-                foreach (var cont in Model.contracts)
+                foreach (var cont in Model.Contracts)
                 {
                     <tr>
                         <td>@cont.Id</td>
